# firtool-standalone-plugin

./: CMakeLists.txt  LICENSE  README.md
include/Standalone/: CMakeLists.txt  StandalonePasses.td
lib/CAPI/: CMakeLists.txt
lib/Standalone/: CMakeLists.txt  StandalonePasses.cpp
standalone-opt/: CMakeLists.txt  standalone-opt.cpp
standalone-plugin/: CMakeLists.txt  standalone-plugin.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Standalone/: standalone-plugin.mlir
